--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "^2.88.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
@@ -29,6 +30,8 @@
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "express-validator": "^5.0.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.18.1",
