--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "express-validator": "^5.0.2",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.12.1",
